--- a/2015_3/129-Gjuricova/129-452-1-LE-TEI-P5.html
+++ b/2015_3/129-Gjuricova/129-452-1-LE-TEI-P5.html
@@ -20,31 +20,31 @@
 				(a Short) Life: The Czechoslovak Parliament 1989-1992</h1></div><div
 			class="docAuthor">Adéla Gjuričová<span id="ftn1_return"><a class="notelink"
 					title="senior researcher, PhD, Institute of Contemporary History of the Czech Academy of Sciences, Puškinovo náměstí …"
-					href="#ftn1"><sup>*</sup></a></span></div>
-		<div class="docImprint">Cobiss tip:
-			1.01<br/>
-			UDK: </div><div lang="sl" class="abstract" id="index.xml-front.1_div.1"><h2
-				lang="sl"><span class="head">IZVLEČEK</span><br /><span class="head">(KRATKO)
-					ŽIVLJENJE: ČEŠKOSLOVAŠKI PARLAMENT 1989–1992</span></h2><p><span
-					class="numberParagraph">1</span><span style="font-style: italic">Češkoslovaški
-					zvezni parlament je bil vzpostavljen leta 1968, da bi nadomestil državni zbor
-					unitaristične države in tako formalno izrazil enakopravnost Čehov in Slovakov v
-					novoustanovljeni federaciji. Po zlomu reform praške pomladi je socialistični
-					parlament izgubil večino suverenosti, ohranil pa je zvezni značaj in formalne
-					postopke, s čimer je predstavljal nekakšno »podporno« zakonodajno telo. Leta
-					1989 je žametna revolucija, ki se je opredelila za spoštovanje miru in
-					zakonitosti, v središču nove politike seveda našla parlament starega režima. V
-					revolucionarnem parlamentu 1989–1990 je koncept socialističnega parlamentarizma
-					trčil ob nove motive, kot so nacionalna enotnost, prelom s komunistično
-					preteklostjo, liberalna demokracija in subsidiarnost. Posledično se je
-					oblikovalo več mešanih socialističnih, revolucionarnih in liberalno
-					demokratičnih pogledov na parlament. Vse te koncepte in politične prakse pa so
-					češka in slovaška javnost ter politični predstavniki dojemali in sprejemali na
-					nasprotujoče si načine. Nekatere od teh razlik so se izkazale za nezdružljive in
-					zvezni parlament je nazadnje odigral ključno vlogo pri vodenju razdružitve
-					češkoslovaške federacije leta 1992.</span></p><p><span class="numberParagraph"
-					>2</span><span style="font-style: italic">Ključne besede: Češkoslovaška
-					1989–1992, parlamentarizem, zvezni sistemi oblasti, postkomunistična tranzicija,
+					href="#ftn1"><sup>*</sup></a></span></div><div class="docImprint">Cobiss
+			type: 1.01<br/>
+						UDC: 328(437)"1989/1992"</div><div lang="sl" class="abstract"
+			id="index.xml-front.1_div.1"><h2 lang="sl"><span class="head">IZVLEČEK</span><br /><span
+					class="head">(KRATKO) ŽIVLJENJE: ČEŠKOSLOVAŠKI PARLAMENT
+					1989–1992</span></h2><p><span class="numberParagraph">1</span><span
+					style="font-style: italic">Češkoslovaški zvezni parlament je bil vzpostavljen
+					leta 1968, da bi nadomestil državni zbor unitaristične države in tako formalno
+					izrazil enakopravnost Čehov in Slovakov v novoustanovljeni federaciji. Po zlomu
+					reform praške pomladi je socialistični parlament izgubil večino suverenosti,
+					ohranil pa je zvezni značaj in formalne postopke, s čimer je predstavljal
+					nekakšno »podporno« zakonodajno telo. Leta 1989 je žametna revolucija, ki se je
+					opredelila za spoštovanje miru in zakonitosti, v središču nove politike seveda
+					našla parlament starega režima. V revolucionarnem parlamentu 1989–1990 je
+					koncept socialističnega parlamentarizma trčil ob nove motive, kot so nacionalna
+					enotnost, prelom s komunistično preteklostjo, liberalna demokracija in
+					subsidiarnost. Posledično se je oblikovalo več mešanih socialističnih,
+					revolucionarnih in liberalno demokratičnih pogledov na parlament. Vse te
+					koncepte in politične prakse pa so češka in slovaška javnost ter politični
+					predstavniki dojemali in sprejemali na nasprotujoče si načine. Nekatere od teh
+					razlik so se izkazale za nezdružljive in zvezni parlament je nazadnje odigral
+					ključno vlogo pri vodenju razdružitve češkoslovaške federacije leta
+				1992.</span></p><p><span class="numberParagraph">2</span><span
+					style="font-style: italic">Ključne besede: Češkoslovaška 1989–1992,
+					parlamentarizem, zvezni sistemi oblasti, postkomunistična tranzicija,
 					razdružitev Češkoslovaške</span></p></div><div class="abstract"
 			id="index.xml-front.1_div.2"><h2><span class="head">ABSTRACT</span></h2><p><span
 					class="numberParagraph">1</span><span style="font-style: italic">The
@@ -694,8 +694,7 @@
 				<li id="index.xml-bibl-d28e629"><div class="biblfree">Act No. 304/1990 Col., on
 						salary and reimbursement of expenses of deputies of the Federal Assembly.
 					</div></li>
-			</ul></div><div lang="sl" class="summary" id="index.xml-back.1_div.2">
-				<h2 lang="sl"
+			</ul></div><div lang="sl" class="summary" id="index.xml-back.1_div.2"><h2 lang="sl"
 					><span class="head">(KRATKO) ŽIVLJENJE: ČEŠKOSLOVAŠKI PARLAMENT
 					1989–1992</span><br /><span class="head">POVZETEK</span></h2>
 				<p
