--- a/2015_3/130-Roubal/130-446-1-LE-TEI-P5.html
+++ b/2015_3/130-Roubal/130-446-1-LE-TEI-P5.html
@@ -1,7 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<!--THIS FILE IS GENERATED FROM AN XML MASTER. DO NOT EDIT (5)-->
 		<title>Revolution by the Law: Transformation of the Czechoslovak Federal Assembly
 			1989–1990</title>
 		<meta name="author"
@@ -23,37 +22,38 @@
 			1989–1990</h1></div><div class="docAuthor">Petr Roubal<span id="ftn1_return"><a
 					class="notelink"
 					title="senior researcher, PhD, Institute of Contemporary History of the Czech Academy of Sciences, Puškinovo náměstí …"
-					href="#ftn1"><sup>*</sup></a></span></div><div class="docImprint">Cobiss tip:
-			1.01<br/>
-						UDK: </div><div lang="sl" class="abstract" id="index.xml-front.1_div.1"><h2
-				lang="sl"><span class="head">IZVLEČEK</span><br /><span class="head">REVOLUCIJA V
-					SKLADU Z ZAKONOM: PREOBLIKOVANJE ČEŠKOSLOVAŠKEGA ZVEZNEGA PARLAMENTA V OBDOBJU
-					1989–1990</span></h2><p><span class="numberParagraph">1</span><span
-					style="font-style: italic">Študija raziskuje vlogo zveznega parlamenta v žametni
-					revoluciji. Z razpadom komunistične partije je zvezni parlament nepričakovano
-					postal ključna ustavna institucija s pomembnimi pooblastili v času hitrih
-					političnih sprememb. Revolucionarno gibanje Državljanski forum je doseglo
-					sprejem zakonodaje, ki mu je omogočila, da je razrešilo precej poslancev in jih
-					s kooptacijo nadomestilo s svojimi kandidati. Ta metoda »čistke« parlamenta je
-					imela daljnosežne posledice za češkoslovaško politično kulturo po
-					novembru.</span></p><p><span class="numberParagraph">2</span><span
-					style="font-style: italic">Ključne besede: Češkoslovaška 1989–1990,
-					parlamentarizem, zvezni parlament, žametna revolucija na
-				Češkoslovaškem</span></p></div><div class="abstract" id="index.xml-front.1_div.2"
-					><h2><span class="head">ABSTRACT</span></h2><p><span class="numberParagraph"
-					>1</span><span style="font-style: italic">This study looks at the role of the
-					Federal Assembly in the Velvet Revolution. With the disintegration of the
-					communist party, the Federal Assembly became unexpectedly a key constitutional
-					institution with far reaching powers in times of rapid political change. The
-					revolutionary movement Civic Forum forced through a legislation that enabled to
-					recall substantial part of the members of the parliament and replace them by its
-					own candidates through co-optation. This method of “cleansing” of the parliament
-					had far-reaching consequences for the post-November Czechoslovak political
-					culture. </span></p><p><span class="numberParagraph">2</span><span
-					style="font-style: italic">Keywords: Czechoslovakia 1989-1990, Parliamentarism,
-					The Federal Assembly, Velvet Revolution in Czechoslovakia</span></p></div><div
-			class="teidiv0" id="index.xml-body.1_div.1"><h2><span class="headingNumber">1.
-					</span><span class="head">Introduction<span id="ftn2_return"><a class="notelink"
+					href="#ftn1"><sup>*</sup></a></span></div><div class="docImprint">Cobiss
+			type: 1.01<br/>
+						UDC: 328: 340.134(437)"1989/1990"</div><div lang="sl" class="abstract"
+			id="index.xml-front.1_div.1"><h2 lang="sl"><span class="head">IZVLEČEK</span><br /><span
+					class="head">REVOLUCIJA V SKLADU Z ZAKONOM: PREOBLIKOVANJE ČEŠKOSLOVAŠKEGA
+					ZVEZNEGA PARLAMENTA V OBDOBJU 1989–1990</span></h2><p><span
+					class="numberParagraph">1</span><span style="font-style: italic">Študija
+					raziskuje vlogo zveznega parlamenta v žametni revoluciji. Z razpadom
+					komunistične partije je zvezni parlament nepričakovano postal ključna ustavna
+					institucija s pomembnimi pooblastili v času hitrih političnih sprememb.
+					Revolucionarno gibanje Državljanski forum je doseglo sprejem zakonodaje, ki mu
+					je omogočila, da je razrešilo precej poslancev in jih s kooptacijo nadomestilo s
+					svojimi kandidati. Ta metoda »čistke« parlamenta je imela daljnosežne posledice
+					za češkoslovaško politično kulturo po novembru.</span></p><p><span
+					class="numberParagraph">2</span><span style="font-style: italic">Ključne besede:
+					Češkoslovaška 1989–1990, parlamentarizem, zvezni parlament, žametna revolucija
+					na Češkoslovaškem</span></p></div><div class="abstract"
+			id="index.xml-front.1_div.2"><h2><span class="head">ABSTRACT</span></h2><p><span
+					class="numberParagraph">1</span><span style="font-style: italic">This study
+					looks at the role of the Federal Assembly in the Velvet Revolution. With the
+					disintegration of the communist party, the Federal Assembly became unexpectedly
+					a key constitutional institution with far reaching powers in times of rapid
+					political change. The revolutionary movement Civic Forum forced through a
+					legislation that enabled to recall substantial part of the members of the
+					parliament and replace them by its own candidates through co-optation. This
+					method of “cleansing” of the parliament had far-reaching consequences for the
+					post-November Czechoslovak political culture. </span></p><p><span
+					class="numberParagraph">2</span><span style="font-style: italic">Keywords:
+					Czechoslovakia 1989-1990, Parliamentarism, The Federal Assembly, Velvet
+					Revolution in Czechoslovakia</span></p></div><div class="teidiv0"
+			id="index.xml-body.1_div.1"><h2><span class="headingNumber">1. </span><span class="head"
+						>Introduction<span id="ftn2_return"><a class="notelink"
 							title="This text is an abridged and adapted version of the study Petr Roubal, Starý pes, nové kousky: koo…"
 							href="#ftn2"><sup>1</sup></a></span></span></h2><p><span
 					class="numberParagraph">1</span>The term democratic revolution is an oxymoron.
