--- a/2015_3/131-Zahradnicek/131-450-1-LE-TEI-P5.html
+++ b/2015_3/131-Zahradnicek/131-450-1-LE-TEI-P5.html
@@ -25,48 +25,50 @@
 						href="#ftn2"><sup>1</sup></a></span></h1></div><div class="docAuthor">Tomáš
 				Zahradníček<span id="ftn1_return"><a class="notelink"
 					title="researcher, PhD, Institute of Contemporary History of the Czech Academy of Sciences, Puškinovo náměstí 9, Prag…"
-					href="#ftn1"><sup>*</sup></a></span></div><div class="docImprint">Cobiss tip:
-			1.01<br/>UDK: </div><div lang="sl" class="abstract" id="index.xml-front.1_div.1"><h2
-				lang="sl"><span class="head">IZVLEČEK</span><br /><span class="head">V PARLAMENTU
-					NAJ BI POTEKALE RAZPRAVE, VENDAR SE JE TO IZKAZALO ZA NEMOGOČE: ZVEZNI PARLAMENT
-					IN ŽAMETNA REVOLUCIJA NA ČEŠKOSLOVAŠKEM LETA 1989</span></h2><p><span
-					class="numberParagraph">1</span><span style="font-style: italic">Leta 1989, ko
-					se je zrušil komunistični režim, se je na Češkoslovaškem pogosto ponavljala
-					zahteva, da bi bilo treba pomembno politično razpravo o usmeritvi države voditi
-					zlasti v parlamentu. Vendar se je parlament vse leto izmikal bistvenim
-					političnim razpravam. Zakonodajno telo ni postalo politični oder in forum za
-					pomembne razprave ali prizorišče merjenja moči nasprotnikov. Članek opisuje
-					poskuse pooblastitve parlamenta in analizira razloge za njihov neuspeh.
-					Osredotoča se zlasti na nekaj tednov po padcu berlinskega zidu, ki so na
-					Češkoslovaškem dosegli vrhunec z izvolitvijo Václava Havla in Aleksandra Dubčka
-					na vrhovni ustavni funkciji predsednika in predsednika zveznega parlamenta.
-				</span></p><p><span class="numberParagraph">2</span><span style="font-style: italic"
-					>Ključne besede: Češkoslovaška 1989, parlamentarizem, zvezni parlament,
-					komunistična partija Češkoslovaške</span></p></div><div class="abstract"
-			id="index.xml-front.1_div.2"><h2><span class="head">ABSTRACT</span></h2><p><span
-					class="numberParagraph">1</span><span style="font-style: italic">During 1989,
-					the year of the collapse of the Communist regime, a claim was often repeated in
-					Czechoslovakia that substantive political debate about the direction of the
-					country ought to be held particularly in the parliament. Yet the key political
-					debates shun away from the parliament for the entire year. The legislature did
-					not become the stage for politics, a forum for substantive debates or the arena
-					for competing forces. The article maps the attempts to empower the parliament
-					and analyses the reasons for their failure. Particular focus is given to the few
-					weeks after the fall of the Berlin Wall that culminated in Czechoslovakia with
-					the election of Václav Havel and Alexander Dubček to the supreme constitutional
-					posts of the President and Chairman of the Federal Assembly.</span></p><p><span
-					class="numberParagraph">2</span><span style="font-style: italic">Keywords:
-					Czechoslovakia 1989, Parliamentarism, The Federal Assembly, The Communist Party
-					of Czechoslovakia</span></p></div><p><span class="numberParagraph"
-			>1</span>During the breakthrough year of 1989 a claim was often repeated in
-			Czechoslovakia that substantive political debate about the direction of the country
-			ought to be held particularly in the parliament. Yet the key political debates shun away
-			from the parliament for the entire year. The legislature did not become the stage for
-			politics, a forum for substantive debates or the arena for competing forces. This study
-			maps the attempts to empower the parliament and their failure. Particular focus is given
-			to the few weeks after the fall of the Berlin Wall that culminated in Czechoslovakia
-			with the rise of Václav Havel and Alexander Dubček to the supreme constitutional posts
-			of the President and Chairman of the Federal Assembly.<span id="ftn3_return"><a
+					href="#ftn1"><sup>*</sup></a></span></div><div class="docImprint">Cobiss
+			type: 1.01<br/>
+						UDC: 328(437):323.27"1989"</div><div lang="sl" class="abstract"
+			id="index.xml-front.1_div.1"><h2 lang="sl"><span class="head">IZVLEČEK</span><br /><span
+					class="head">V PARLAMENTU NAJ BI POTEKALE RAZPRAVE, VENDAR SE JE TO IZKAZALO ZA
+					NEMOGOČE: ZVEZNI PARLAMENT IN ŽAMETNA REVOLUCIJA NA ČEŠKOSLOVAŠKEM LETA
+					1989</span></h2><p><span class="numberParagraph">1</span><span
+					style="font-style: italic">Leta 1989, ko se je zrušil komunistični režim, se je
+					na Češkoslovaškem pogosto ponavljala zahteva, da bi bilo treba pomembno
+					politično razpravo o usmeritvi države voditi zlasti v parlamentu. Vendar se je
+					parlament vse leto izmikal bistvenim političnim razpravam. Zakonodajno telo ni
+					postalo politični oder in forum za pomembne razprave ali prizorišče merjenja
+					moči nasprotnikov. Članek opisuje poskuse pooblastitve parlamenta in analizira
+					razloge za njihov neuspeh. Osredotoča se zlasti na nekaj tednov po padcu
+					berlinskega zidu, ki so na Češkoslovaškem dosegli vrhunec z izvolitvijo Václava
+					Havla in Aleksandra Dubčka na vrhovni ustavni funkciji predsednika in
+					predsednika zveznega parlamenta. </span></p><p><span class="numberParagraph"
+					>2</span><span style="font-style: italic">Ključne besede: Češkoslovaška 1989,
+					parlamentarizem, zvezni parlament, komunistična partija
+			Češkoslovaške</span></p></div><div class="abstract" id="index.xml-front.1_div.2"
+					><h2><span class="head">ABSTRACT</span></h2><p><span class="numberParagraph"
+					>1</span><span style="font-style: italic">During 1989, the year of the collapse
+					of the Communist regime, a claim was often repeated in Czechoslovakia that
+					substantive political debate about the direction of the country ought to be held
+					particularly in the parliament. Yet the key political debates shun away from the
+					parliament for the entire year. The legislature did not become the stage for
+					politics, a forum for substantive debates or the arena for competing forces. The
+					article maps the attempts to empower the parliament and analyses the reasons for
+					their failure. Particular focus is given to the few weeks after the fall of the
+					Berlin Wall that culminated in Czechoslovakia with the election of Václav Havel
+					and Alexander Dubček to the supreme constitutional posts of the President and
+					Chairman of the Federal Assembly.</span></p><p><span class="numberParagraph"
+					>2</span><span style="font-style: italic">Keywords: Czechoslovakia 1989,
+					Parliamentarism, The Federal Assembly, The Communist Party of
+					Czechoslovakia</span></p></div><p><span class="numberParagraph">1</span>During
+			the breakthrough year of 1989 a claim was often repeated in Czechoslovakia that
+			substantive political debate about the direction of the country ought to be held
+			particularly in the parliament. Yet the key political debates shun away from the
+			parliament for the entire year. The legislature did not become the stage for politics, a
+			forum for substantive debates or the arena for competing forces. This study maps the
+			attempts to empower the parliament and their failure. Particular focus is given to the
+			few weeks after the fall of the Berlin Wall that culminated in Czechoslovakia with the
+			rise of Václav Havel and Alexander Dubček to the supreme constitutional posts of the
+			President and Chairman of the Federal Assembly.<span id="ftn3_return"><a
 					class="notelink"
 					title="The best summary publications about the Czechoslovak November and December 1989: James Krapfl, Revolution with a Human Face: Polit…"
 					href="#ftn3"><sup>2</sup></a></span></p><p><span class="numberParagraph"
